--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>time Converter</title>
-    <script src="js/"></script>
+    <script src="js/index.js"></script>
 </head>
 <body>
     <h1>time Converter</h1>
