--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>time Converter</title>
+    <link rel="stylesheet" href="css/index.css">
     <script src="js/index.js"></script>
 </head>
 <body>
