[+/-]css: change input -> #time [+] input size = 300px

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>time Converter</h1>
     <form action="#" onsubmit="return false;">
-        <input id="time" type="number" min="01" max="60" step="1" name="source_time" value="40">
+        <input id="time" type="number" min="01" max="60" step="1" name="source_time" placeholder="Введите минуты">
     </form>
     <div id="result"></div>
 </body>
