[+] add css rules [+] add @media

--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <script src="js/index.js"></script>
 </head>
 <body>
-    <h1>time Converter</h1>
-    <form action="#" onsubmit="return false;">
-        <input id="time" type="number" min="01" max="60" step="1" name="source_time" placeholder="Введите минуты">
-    </form>
-    <div id="result"></div>
+   <section>
+        <div id = inputTime>
+            <h1>time Converter</h1>
+                <form action="#" onsubmit="return false;">
+                    <input id="time" type="number" min="01" max="60" step="1" name="source_time" placeholder="Введите минуты">
+                </form>
+            <div id="result"></div>
+        </div>
+    </section>
 </body>
 </html>
