[+] added text style

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <title>time Converter</title>
     <link rel="stylesheet" href="css/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
     <script src="js/index.js"></script>
 </head>
 <body>
    <section>
         <div id = inputTime>
-            <h1>time Converter</h1>
+            <h1>Time Converter</h1>
                 <form action="#" onsubmit="return false;">
                     <input id="time" type="number" min="01" max="60" step="1" name="source_time" placeholder="Введите минуты">
                 </form>
