--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <section>
         <div id = inputTime>
             <h1>Time Converter</h1>
-                <form action="#" onsubmit="return false;">
+                <form action="#" onsubmit="return false;" title="Введите число от 0 до 60">
                     <input id="time" type="number" min="01" max="60" step="1" name="source_time" placeholder="Введите минуты">
                 </form>
             <div id="result"></div>
